<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddPillActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout_pillTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText android:id="@+id/pill_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="30"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:hint="@string/pill_name" />
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:id="@+id/linearLayout_time_image_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_below="@+id/textInputLayout_pillTitle"
                >
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"

                    >

                <TextView android:id="@+id/time_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Reminder Time"
                    android:textSize="15sp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/blue600"
                    android:layout_marginTop="8dp"/>

                <TextView android:id="@+id/reminder_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:gravity="center_horizontal"
                    android:clickable="true"
                    android:layout_marginTop="25dp"
                    android:layout_gravity="center"
                    />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    >

                    <TextView android:id="@+id/textView_imageTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Pill Photo"
                        android:textSize="15sp"
                        android:textColor="@color/blue600"
                        android:layout_marginTop="8dp"
                        android:gravity="center_horizontal"
                        />

                  <ImageView
                      android:id="@+id/imageView_pillImage"
                      android:layout_width="80dp"
                      android:layout_height="80dp"
                      android:src="@drawable/ic_photo_camera_grey_500_36dp"
                      android:scaleType="centerCrop"
                      />
                </LinearLayout>
            </LinearLayout>



            <TextView android:id="@+id/schedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout_time_image_add"
                android:text="Schedule"
                android:textSize="15sp"
                android:textColor="@color/blue600"
                android:layout_marginTop="8dp"/>

            <CheckBox android:id="@+id/every_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Every day"
                android:onClick="onCheckboxClicked"
                android:layout_below="@+id/schedule"/>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/checkbox_layout"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/every_day"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp">



                <com.android.medpills.customviews.CustomCheckBox
                    android:id="@+id/checkbox_monday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Monday"
                    android:button="@null"
                    android:onClick="onCheckboxClicked"
                    android:padding="1dp"
                    android:gravity="center"/>

                <com.android.medpills.customviews.CustomCheckBox
                    android:id="@+id/checkbox_tuesday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Tuesday"
                    android:button="@null"
                    android:onClick="onCheckboxClicked"
                    android:padding="1dp"
                    android:gravity="center"/>

                <com.android.medpills.customviews.CustomCheckBox
                    android:id="@+id/checkbox_wednesday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Wednesday"
                    android:button="@null"
                    android:onClick="onCheckboxClicked"
                    android:padding="1dp"
                    android:gravity="center"/>

                <com.android.medpills.customviews.CustomCheckBox
                    android:id="@+id/checkbox_thursday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Thursday"
                    android:button="@null"
                    android:onClick="onCheckboxClicked"
                    android:padding="1dp"
                    android:gravity="center"/>

                <com.android.medpills.customviews.CustomCheckBox
                    android:id="@+id/checkbox_friday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Friday"
                    android:button="@null"
                    android:onClick="onCheckboxClicked"
                    android:padding="1dp"
                    android:gravity="center"/>

                <com.android.medpills.customviews.CustomCheckBox
                    android:id="@+id/checkbox_saturday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Saturday"
                    android:button="@null"
                    android:onClick="onCheckboxClicked"
                    android:padding="1dp"
                    android:gravity="center"/>
                <com.android.medpills.customviews.CustomCheckBox
                    android:id="@+id/checkbox_sunday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Sunday"
                    android:button="@null"
                    android:onClick="onCheckboxClicked"
                    android:padding="1dp"
                    android:gravity="center"/>
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <LinearLayout android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        style="@android:style/ButtonBar"
        android:background="#039be5">

        <Button
            android:id="@+id/btn_cancel_alarm"
            android:text="@string/str_btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:layout_weight="0.5"
            android:textColor="#ffffff"
            style="?android:attr/borderlessButtonStyle"/>

        <View android:layout_height="fill_parent"
            android:layout_width="2dp"
            android:background="@color/blue400"/>

        <Button
            android:id="@+id/btn_set_alarm"
            android:text="@string/str_btn_set_alarm"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:layout_weight="0.5"
            android:textColor="#ffffff"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

</RelativeLayout>



